--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -1,17 +1,17 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Discord 알리미
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -23,10 +23,18 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2 # 지우면 안됨, 서버에서 클론받아 액션을 돌리고 checkout을 하는 과정이 필수적임
 
       - name: 멋사 안녕
         run: echo "멋사 안녕"
+
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          https://discord.com/api/webhooks/891986654858981386/7geMGGCcvZL94ujdzU7dNhqwYbnZes-kfP8a2dPfpvHtGoz5ckchRJJldd_TlbWu1JeT
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
 
       # # Runs a single command using the runners shell
       # - name: Run a one-line script
