--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -31,6 +31,8 @@ jobs:
       - name: Discord notification
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          DISCORD_USERNAME: GitHub Actions
+          DISCORD_AVARTAR: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRt0KUWUT002JiwjqTzAr19wqgquB8ujPi5fw&usqp=CAU
         uses: Ilshidur/action-discord@master
         with:
           args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
