--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -32,10 +32,11 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           DISCORD_USERNAME: GitHub Actions
-          DISCORD_AVARTAR: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb3syN7lf7kFs8Z1YIAwWg1AVwNtIn0Ozzkw&usqp=CAU.img
+          DISCORD_AVARTAR: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb3syN7lf7kFs8Z1YIAwWg1AVwNtIn0Ozzkw&usqp=CAU.png
         uses: Ilshidur/action-discord@master
         with:
-          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
+          args: "DOUGH GitHub Actions!: {{GITHUB_EVENT_NAME}}"
+          # args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
 
       # # Runs a single command using the runners shell
       # - name: Run a one-line script
